# ai-agent

./: .gitignore  Dockerfile  README.md  auth.py  base_agent.py  crud.py  database.py  dependencies.py  docker-compose.yml  entrypoint.sh  main.py  orchestrator.py  pyproject.toml  questions
agents/: finance_agent.py  general_agent.py  hr_agent.py  inventory_agent.py  sales_agent.py
data/: mock_data.py
