[project]
name = "ai-agents"
version = "0.1.0"
description = ""
authors = [
    {name = "SHOXAKONG",email = "bekmurodovshohruh0224@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "python-decouple (>=3.8,<4.0)",
    "pydantic (>=2.13.0,<3.0.0)",
    "google-genai (>=1.73.0,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "python-multipart (>=0.0.26,<0.0.27)",
    "bcrypt (>=5.0.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
